--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint:fix": "oxlint packages/* --fix",
     "format": "oxfmt packages/*",
     "test:all": "bun test packages",
-    "test": "bun test packages/btuin",
+    "test": "bun test packages/btuin packages/layout-engine packages/reactivity packages/renderer packages/terminal",
     "profiler": "bun test scripts/profiler",
     "check": "bunx tsc --noEmit"
   },
