--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "packages/*"
   ],
   "scripts": {
-    "start": "bun run --cwd packages/btuin src/app.ts",
+    "start": "bun run",
     "build": "bun run --cwd packages/btuin build.ts",
     "lint": "oxlint packages/*",
     "lint:fix": "oxlint packages/* --fix",
     "format": "oxfmt packages/*",
-    "test:all": "bun test packages",
     "test": "bun test packages/btuin packages/layout-engine packages/reactivity packages/renderer packages/terminal",
-    "profile:stress": "bun test scripts/profiler-stress.test.ts",
-    "profile:layout": "bun test scripts/profiler-layout.test.ts",
+    "test:watch": "pnpm test --watch",
+    "test:all": "bun test packages",
+    "profiler": "bun test scripts/profiler*.spec.ts",
+    "profiler:stress": "bun test scripts/profiler-stress.test.ts",
+    "profiler:layout": "bun test scripts/profiler-layout.test.ts",
     "check": "bunx tsc --noEmit"
   },
   "devDependencies": {
