Add incremental layout engine and renderer tweaks
Implement a stateful, incremental layout engine with a wasm bridge
(init_layout_engine, update_nodes, remove_nodes, compute_layout by key) and
corresponding Rust stateful implementation.

Optimize renderer and buffers: track ASCII-only buffers with FlatBuffer, add
ASCII fast-path diffing, avoid diffing the same buffer instance, fall back to a
safe full redraw when diff output is empty, and ensure one frame is rendered on
mount.

Add showcase package and smoke tests (with exit timers) and include it in the
test script. Misc profiler and minor test adjustments.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "oxlint packages/*",
     "lint:fix": "oxlint packages/* --fix",
     "format": "oxfmt packages/*",
-    "test": "bun test packages/btuin packages/layout-engine packages/reactivity packages/renderer packages/terminal",
+    "test": "bun test packages/btuin packages/layout-engine packages/reactivity packages/renderer packages/terminal packages/showcase",
     "test:watch": "pnpm test --watch",
     "test:all": "bun test packages",
     "profiler": "bun test scripts/profiler*.spec.ts",
