--- a/packages/layout-engine/Cargo.toml
+++ b/packages/layout-engine/Cargo.toml
@@ -11,3 +11,6 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
 taffy = "0.9.2"
 wasm-bindgen = "0.2.106"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
