Add Profiler Limit Test and Improve Profiling
Add scripts/profiler-limit.spec.ts and a "profiler:limit" npm script. Introduce
WARMUP_FRAMES in profiler-core.ts. Update profiler specs to assert startup
latency and steady-state metrics and call Bun.gc(true) before runs. Add clipping
early-return to renderElement to skip offscreen rendering. Apply minor
formatting and whitespace cleanup in layout and tests.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "profiler": "bun test scripts/profiler*.spec.ts",
     "profiler:stress": "bun test scripts/profiler-stress.test.ts",
     "profiler:layout": "bun test scripts/profiler-layout.test.ts",
+    "profiler:limit": "bun test scripts/profiler-limit.spec.ts",
     "check": "bunx tsc --noEmit"
   },
   "devDependencies": {
