--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Install wasm-pack
+        uses: jetli/wasm-pack-action@v4
+        with:
+          version: "latest"
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
@@ -39,6 +47,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Build Layout Engine (WASM)
+        run: pnpm --filter @btuin/layout-engine build
 
       - name: Check Formatting
         run: pnpm run format --check
