--- a/.github/workflows/profiler.yml
+++ b/.github/workflows/profiler.yml
@@ -20,13 +20,11 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          profile: minimal
 
-      - name: Install wasm-pack
-        run: cargo install wasm-pack
+      - uses: jetli/wasm-pack-action@v0.4.0
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
