Run package build script in CI
Replace CI's direct filtered command with a project build script that invokes
the @btuin/layout-engine via pnpm. Update package.json build to use pnpm
--filter @btuin/layout-engine build. Add "pkg" to .gitignore.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build Layout Engine (WASM)
-        run: pnpm --filter @btuin/layout-engine build
+        run: pnpm run build
 
       - name: Check Formatting
         run: pnpm run format --check
