--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "start": "bun run",
-    "build": "bun run --cwd packages/btuin build.ts",
+    "build": "pnpm --filter @btuin/layout-engine build",
     "lint": "oxlint packages/*",
     "lint:fix": "oxlint packages/* --fix",
     "format": "oxfmt packages/*",
