--- a/packages/showcase/package.json
+++ b/packages/showcase/package.json
@@ -1,10 +1,11 @@
 {
   "name": "showcase",
+  "private": true,
   "dependencies": {
     "btuin": "workspace:*"
   },
   "scripts": {
-    "counter": "BTUIN_EXIT_AFTER_MS=0 bun run counter.ts",
-    "dashboard": "BTUIN_EXIT_AFTER_MS=0 bun run dashboard.ts"
+    "counter": "BTUIN_EXIT_AFTER_MS=0 bun run src/counter.ts",
+    "dashboard": "BTUIN_EXIT_AFTER_MS=0 bun run src/dashboard.ts"
   }
 }
