--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "btuin-monorepo",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "workspaces": [
@@ -29,7 +30,7 @@
     "typescript": "^5"
   },
   "engines": {
-    "bun": "latest"
+    "bun": "^1.3.4"
   },
   "packageManager": "pnpm@10.25.0"
 }
