--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@btuin/renderer",
+  "version": "0.1.0",
   "type": "module",
   "dependencies": {
     "@btuin/terminal": "workspace:*"
@@ -7,5 +8,12 @@
   "exports": {
     ".": "./src/index.ts",
     "./types": "./src/types/index.ts"
-  }
+  },
+  "types": "src/index.ts",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "src"
+  ]
 }
