--- a/src/layout-engine/Cargo.toml
+++ b/src/layout-engine/Cargo.toml
@@ -8,9 +8,5 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 serde = { version = "1.0.228", features = ["derive"] }
-serde-wasm-bindgen = "0.6.5"
 taffy = "0.9.2"
-wasm-bindgen = "0.2.106"
-
-[package.metadata.wasm-pack.profile.release]
-wasm-opt = false
+libc = "0.2"
