--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,25 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup mise
+        uses: jdx/mise-action@v2
         with:
-          toolchain: stable
+          cache: true
 
-      - uses: jetli/wasm-pack-action@v0.4.0
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: false
+      - name: Install toolchains
+        run: mise install
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: mise exec -- pnpm install --frozen-lockfile
 
-      - name: Build
-        run: pnpm run build
+      - name: Type Check
+        run: mise run check
+
+      - name: Build Layout Engine (FFI)
+        run: mise run build:ffi
