--- a/.github/workflows/profiler.yml
+++ b/.github/workflows/profiler.yml
@@ -19,45 +19,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - name: Setup mise
+        uses: jdx/mise-action@v2
         with:
-          toolchain: stable
+          cache: true
 
-      - uses: jetli/wasm-pack-action@v0.4.0
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v2
-        with:
-          bun-version: latest
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          run_install: false
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+      - name: Install toolchains
+        run: mise install
 
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: mise exec -- pnpm install --frozen-lockfile
 
-      - name: Build Layout Engine (WASM)
-        run: pnpm run build
+      - name: Build Layout Engine (FFI)
+        run: mise run build:ffi
 
       - name: Run Limit Test
         run: |
-          pnpm run profiler:limit | tee benchmark_result.txt
+          mise run profiler:limit | tee benchmark_result.txt
 
       - name: Extract Report
         id: extract_report
