--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/bun": "latest",
-    "oxfmt": "^0.17.0",
-    "oxlint": "^1.32.0"
+    "@types/bun": "latest"
   },
   "peerDependencies": {
     "typescript": "^5"
