--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     // alias
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-    },
-  },
+      "@/*": ["./src/*"]
+    }
+  }
 }
