--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "name": "btuin-monorepo",
+  "name": "btuin",
   "version": "0.1.0",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "private": false,
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
