--- a/mise.toml
+++ b/mise.toml
@@ -12,6 +12,7 @@ rust="stable"
 "lint:fix"="pnpm exec oxlint --fix"
 "format"="pnpm exec oxfmt"
 "check"="bunx tsc --noEmit"
+"precommit"="mise run format && mise run lint:fix && mise run check"
 "test"="bun test"
 "test:watch"="bun test --watch"
 "profiler"="bun test ./scripts/profiler*.spec.ts"
