--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "btuin",
   "version": "0.1.0",
   "private": false,
+  "files": [
+    "native",
+    "README.md",
+    "src",
+    "tsconfig.json"
+  ],
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "^1.3.5"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "engines": {
-    "bun": "^1.3.4"
+    "bun": "^1.3.5"
   },
   "packageManager": "pnpm@10.25.0"
 }
