--- a/mise.toml
+++ b/mise.toml
@@ -3,7 +3,7 @@ bun="1.3.5"
 "npm:oxfmt" = "latest"
 "npm:oxlint" = "latest"
 pnpm="10.26.0"
-rust="stable"
+rust="1.92.0"
 
 [tasks]
 "start"="bun run"
