--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,8 +60,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Setup mise
+        uses: jdx/mise-action@v2
+        with:
+          cache: true
+
+      - name: Install toolchains
+        run: mise install
+
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: mise exec -- pnpm install --frozen-lockfile
 
       - name: Download all binaries
         uses: actions/download-artifact@v4
