--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,18 @@ on:
     branches: ["**"]
 
 jobs:
-  check:
+  build-ffi:
+    uses: ./.github/workflows/build-ffi.yml
+    with:
+      os: ubuntu-latest
+      target: x86_64-unknown-linux-gnu
+      artifact_name: liblayout_engine.so
+      rename_to: liblayout-linux-x64.so
+
+  test:
     name: Lint, Type Check & Test
     runs-on: ubuntu-latest
+    needs: build-ffi
 
     steps:
       - uses: actions/checkout@v4
@@ -23,7 +32,13 @@ jobs:
         run: mise install
 
       - name: Install dependencies
-        run: mise exec -- pnpm install --frozen-lockfile
+        run: mise exec -- bun install --frozen-lockfile
+
+      - name: Download FFI binary
+        uses: actions/download-artifact@v4
+        with:
+          name: binary-x86_64-unknown-linux-gnu
+          path: src/layout-engine/native/
 
       - name: Check Formatting
         run: mise run format -- --check .
@@ -33,9 +48,6 @@ jobs:
 
       - name: Type Check
         run: mise run check
-
-      - name: Build Layout Engine (FFI)
-        run: mise run build:ffi
 
       - name: Run Tests
         run: mise run test
