--- a/.github/workflows/profiler.yml
+++ b/.github/workflows/profiler.yml
@@ -3,14 +3,23 @@ name: Performance Benchmark
 on:
   pull_request:
     branches: ["**"]
-    paths-ignore:
-      - "**.md"
-      - "docs/**"
+    paths:
+      - "src/*"
   workflow_dispatch:
 
 jobs:
+  build-binary:
+    name: Build Layout Engine (FFI)
+    uses: ./.github/workflows/build-ffi.yml
+    with:
+      os: ubuntu-latest
+      target: x86_64-unknown-linux-gnu
+      artifact_name: liblayout_engine.so
+      rename_to: liblayout-linux-x64.so
+
   benchmark:
     name: Run Benchmark
+    needs: build-binary
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -19,19 +28,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup mise
-        uses: jdx/mise-action@v2
-        with:
-          cache: true
-
-      - name: Install toolchains
-        run: mise install
-
       - name: Install dependencies
-        run: mise exec -- pnpm install --frozen-lockfile
+        run: mise exec -- bun install --frozen-lockfile
 
-      - name: Build Layout Engine (FFI)
-        run: mise run build:ffi
+      - name: Download FFI binary
+        uses: actions/download-artifact@v4
+        with:
+          name: binary-x86_64-unknown-linux-gnu
+          path: src/layout-engine/native/
 
       - name: Run Limit Test
         run: |
