--- a/mise.toml
+++ b/mise.toml
@@ -2,15 +2,14 @@
 bun="1.3.5"
 "npm:oxfmt" = "latest"
 "npm:oxlint" = "latest"
-pnpm="10.26.0"
 rust="1.92.0"
 
 [tasks]
 "start"="bun run"
 "build:ffi" = "cd src/layout-engine && cargo build --release"
-"lint"="pnpm exec oxlint"
-"lint:fix"="pnpm exec oxlint --fix"
-"format"="pnpm exec oxfmt"
+"lint"="oxlint"
+"lint:fix"="oxlint --fix"
+"format"="oxfmt"
 "check"="bunx tsc --noEmit"
 "precommit"="mise run format && mise run lint:fix && mise run check"
 "test"="bun test"
