--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,21 +7,28 @@ on:
     branches: ["**"]
 
 jobs:
-  build-ffi:
-    uses: ./.github/workflows/build-ffi.yml
-    with:
-      os: ubuntu-latest
-      target: x86_64-unknown-linux-gnu
-      artifact_name: liblayout_engine.so
-      rename_to: liblayout-linux-x64.so
-
   test:
     name: Lint, Type Check & Test
     runs-on: ubuntu-latest
-    needs: build-ffi
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup mise
+        uses: jdx/mise-action@v2
+        with:
+          cache: true
+
+      # Rustビルドキャッシュ
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            src/layout-engine/target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ hashFiles('src/layout-engine/src/lib.rs') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
 
       - name: Setup mise
         uses: jdx/mise-action@v2
@@ -34,11 +41,10 @@ jobs:
       - name: Install dependencies
         run: mise exec -- bun install --frozen-lockfile
 
-      - name: Download FFI binary
-        uses: actions/download-artifact@v4
+      - name: Build Binary
+        run: mise run build:ffi
         with:
-          name: binary-x86_64-unknown-linux-gnu
-          path: src/layout-engine/native/
+          cache: true
 
       - name: Check Formatting
         run: mise run format -- --check .
