--- a/.github/workflows/profiler.yml
+++ b/.github/workflows/profiler.yml
@@ -8,18 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-binary:
-    name: Build Layout Engine (FFI)
-    uses: ./.github/workflows/build-ffi.yml
-    with:
-      os: ubuntu-latest
-      target: x86_64-unknown-linux-gnu
-      artifact_name: liblayout_engine.so
-      rename_to: liblayout-linux-x64.so
-
   benchmark:
     name: Run Benchmark
-    needs: build-binary
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -28,14 +18,29 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            src/layout-engine/target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}-${{ hashFiles('src/layout-engine/src/lib.rs') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
+      - name: Setup mise
+        uses: jdx/mise-action@v2
+        with:
+          cache: true
+
+      - name: Install toolchains
+        run: mise install
+
       - name: Install dependencies
         run: mise exec -- bun install --frozen-lockfile
 
-      - name: Download FFI binary
-        uses: actions/download-artifact@v4
-        with:
-          name: binary-x86_64-unknown-linux-gnu
-          path: src/layout-engine/native/
+      - name: Build Binary
+        run: mise run build:ffi
 
       - name: Run Limit Test
         run: |
