Add package-dev script and update package config
Add scripts/package-dev.ts to build the FFI and stage a dev package including
native binaries. The script supports --outdir and --current-only. Register the
command in mise.toml, bump package.json to 0.1.0-alpha.2, and normalize the bin
path to "bin/btuin"

--- a/mise.toml
+++ b/mise.toml
@@ -18,3 +18,4 @@ rust="1.92.0"
 "profiler:stress"="bun test ./scripts/profiler-stress.spec.ts"
 "profiler:layout"="bun test ./scripts/profiler-layout.spec.ts"
 "profiler:limit"="bun test ./scripts/profiler-limit.spec.ts"
+"package:dev"="bun run ./scripts/package-dev.ts"
