Add architecture diagrams and d2 files
Include new .d2 sources and generated SVGs for docs: rendering pipeline,
reactivity deps, key event propagation, exit lifecycle, and inline stdout/stderr
passthrough. Embed the diagrams in the English and Japanese architecture pages
and update the existing context SVG. Add a docs:d2 script to mise.toml to build
.d2 files.

--- a/mise.toml
+++ b/mise.toml
@@ -14,6 +14,7 @@ rust = "1.92.0"
 "precommit" = "mise run format && mise run lint:fix && mise run check"
 "test" = "bun test"
 "test:watch" = "bun test --watch"
+"docs:d2" = "\\find . -name \"*.d2\" | xargs -n 1 d2 --layout elk"
 "profiler" = "bun test ./scripts/profiler*.spec.ts"
 "profiler:stress" = "bun test ./scripts/profiler-stress.spec.ts"
 "profiler:layout" = "bun test ./scripts/profiler-layout.spec.ts"
