--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "btuin",
-  "version": "0.1.0-alpha.2",
+  "version": "0.1.0-4",
   "private": false,
   "repository": {
     "type": "git",
